fix chronometer hundredths alignment

--- a/src/styles/3-components/_timer.scss
+++ b/src/styles/3-components/_timer.scss
@@ -41,10 +41,7 @@
   }
 
   &.-expanded > .watch {
-    flex: 1;
     display: flex;
-    align-items: center;
-    margin-top: 14vh;
     font-size: 15vw;
   }
 
